--- a/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
+++ b/Owncloud iOs Client/Cells/CustomCell/CustomCellFileAndDirectory.xib
@@ -19,21 +19,13 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="CustomCellFileAndDirectory"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" selectionStyle="none" showsReorderControl="YES" indentationWidth="10" reuseIdentifier="FileAndDirectoryCell" rowHeight="75" id="xFC-Be-DC4" userLabel="FileAndDirectoryCell" customClass="CustomCellFileAndDirectory">
+        <tableViewCell clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" selectionStyle="none" showsReorderControl="YES" accessoryType="detailButton" indentationWidth="10" reuseIdentifier="FileAndDirectoryCell" rowHeight="75" id="xFC-Be-DC4" userLabel="FileAndDirectoryCell" customClass="CustomCellFileAndDirectory">
             <rect key="frame" x="0.0" y="0.0" width="375" height="75"/>
             <autoresizingMask key="autoresizingMask"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="xFC-Be-DC4" id="kmb-eZ-RnB">
-                <rect key="frame" x="0.0" y="0.0" width="375" height="74.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="328" height="74.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <button opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="W3O-NA-GVU" userLabel="Options Button">
-                        <rect key="frame" x="332" y="25" width="25" height="25"/>
-                        <constraints>
-                            <constraint firstAttribute="width" constant="25" id="gdi-1b-EY6"/>
-                            <constraint firstAttribute="height" constant="25" id="mqh-e3-s0B"/>
-                        </constraints>
-                        <state key="normal" image="down-arrow-circle-button-fine.png"/>
-                    </button>
                     <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="5">
                         <rect key="frame" x="17" y="15" width="45" height="45"/>
                         <constraints>
@@ -42,7 +34,7 @@
                         </constraints>
                     </imageView>
                     <button opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="bottomRight" contentHorizontalAlignment="center" contentVerticalAlignment="center" showsTouchWhenHighlighted="YES" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="61k-z8-XyA" userLabel="Shared Info Button">
-                        <rect key="frame" x="301" y="28" width="18" height="18"/>
+                        <rect key="frame" x="258" y="28" width="18" height="18"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="18" id="r2G-eN-27g"/>
                             <constraint firstAttribute="height" constant="18" id="zcE-dJ-FhW"/>
@@ -53,13 +45,13 @@
                         </state>
                     </button>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="One Month Ago - 14 files inside" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="GLa-Gg-rfq" userLabel="File Info Label">
-                        <rect key="frame" x="75" y="32" width="221" height="18"/>
+                        <rect key="frame" x="75" y="32" width="178" height="18"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Regular" family="Source Sans Pro" pointSize="14"/>
                         <color key="textColor" red="0.58823529411764708" green="0.62352941176470589" blue="0.66666666666666663" alpha="1" colorSpace="calibratedRGB"/>
                         <nil key="highlightedColor"/>
                     </label>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Folder Available offline" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="L8z-3T-bfY" userLabel="Shared Info Label">
-                        <rect key="frame" x="93" y="56" width="203" height="10"/>
+                        <rect key="frame" x="93" y="56" width="160" height="10"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="10"/>
                         <color key="textColor" red="0.45098039215686275" green="0.80784313725490198" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <nil key="highlightedColor"/>
@@ -72,7 +64,7 @@
                         </constraints>
                     </imageView>
                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Example of normal folder" lineBreakMode="middleTruncation" baselineAdjustment="alignBaselines" minimumFontSize="10" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3" userLabel="File Name">
-                        <rect key="frame" x="75" y="15" width="221" height="18"/>
+                        <rect key="frame" x="75" y="15" width="178" height="18"/>
                         <fontDescription key="fontDescription" name="SourceSansPro-Semibold" family="Source Sans Pro" pointSize="14"/>
                         <color key="textColor" red="0.3529411764705882" green="0.41176470588235292" blue="0.47058823529411764" alpha="1" colorSpace="calibratedRGB"/>
                         <color key="highlightedColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -87,7 +79,6 @@
                 </subviews>
                 <constraints>
                     <constraint firstItem="GLa-Gg-rfq" firstAttribute="top" secondItem="3" secondAttribute="bottom" constant="-1" id="0Wr-Fn-tUv"/>
-                    <constraint firstAttribute="trailingMargin" secondItem="W3O-NA-GVU" secondAttribute="trailing" constant="10" id="6H8-GM-dZc"/>
                     <constraint firstItem="5" firstAttribute="leading" secondItem="kmb-eZ-RnB" secondAttribute="leadingMargin" constant="9" id="Coe-Sl-2qy"/>
                     <constraint firstItem="L8z-3T-bfY" firstAttribute="top" secondItem="GLa-Gg-rfq" secondAttribute="bottom" constant="6" id="GxV-l8-zDd"/>
                     <constraint firstItem="61k-z8-XyA" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" id="HiO-KZ-z8p"/>
@@ -100,8 +91,6 @@
                     <constraint firstItem="PLc-nO-L3r" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="aZq-q2-GaK"/>
                     <constraint firstItem="74V-Vo-VSv" firstAttribute="bottom" secondItem="5" secondAttribute="bottom" constant="3" id="b4C-Cv-252"/>
                     <constraint firstItem="61k-z8-XyA" firstAttribute="leading" secondItem="GLa-Gg-rfq" secondAttribute="trailing" constant="5" id="dpS-cg-fLy"/>
-                    <constraint firstItem="W3O-NA-GVU" firstAttribute="leading" secondItem="61k-z8-XyA" secondAttribute="trailing" constant="13" id="frg-Uc-zvD"/>
-                    <constraint firstItem="W3O-NA-GVU" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" id="fwa-ko-g7d"/>
                     <constraint firstItem="3" firstAttribute="top" secondItem="kmb-eZ-RnB" secondAttribute="topMargin" constant="7" id="n8m-gW-ugj"/>
                     <constraint firstItem="GLa-Gg-rfq" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="niF-wZ-H3R"/>
                     <constraint firstItem="5" firstAttribute="centerY" secondItem="kmb-eZ-RnB" secondAttribute="centerY" id="t2P-RA-NAI"/>
@@ -116,7 +105,6 @@
                 <outlet property="imageFileStatus" destination="74V-Vo-VSv" id="nYl-kQ-ANq"/>
                 <outlet property="labelInfoFile" destination="GLa-Gg-rfq" id="NPe-85-Qbe"/>
                 <outlet property="labelTitle" destination="3" id="xkx-c7-Gdi"/>
-                <outlet property="optionsButton" destination="W3O-NA-GVU" id="nZ5-j6-2V1"/>
                 <outlet property="sharedInfoButton" destination="61k-z8-XyA" id="1Oj-pl-jH3"/>
                 <outlet property="sharedInfoImageView" destination="PLc-nO-L3r" id="f2Y-hm-f6c"/>
                 <outlet property="sharedInfoLabel" destination="L8z-3T-bfY" id="vaW-7G-NEa"/>
@@ -125,7 +113,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="down-arrow-circle-button-fine.png" width="128" height="128"/>
         <image name="help-icon.png" width="27" height="27"/>
     </resources>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
