--- a/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
+++ b/Owncloud iOs Client/Files/Preview/DetailView/DetailView.xib
@@ -49,8 +49,9 @@
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="company_empty_screen_ipad.png" translatesAutoresizingMaskIntoConstraints="NO" id="RhM-9d-K2q">
                     <rect key="frame" x="128" y="372" width="512" height="279"/>
                     <constraints>
-                        <constraint firstAttribute="width" constant="512" id="ZfA-nJ-UXQ"/>
-                        <constraint firstAttribute="height" constant="279" id="aJ2-Od-njk"/>
+                        <constraint firstAttribute="width" secondItem="RhM-9d-K2q" secondAttribute="height" multiplier="512:279" id="CyC-jt-Rn0"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" priority="750" constant="512" id="ZfA-nJ-UXQ"/>
+                        <constraint firstAttribute="height" relation="greaterThanOrEqual" priority="750" constant="279" id="aJ2-Od-njk"/>
                     </constraints>
                 </imageView>
                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="80">
@@ -175,6 +176,7 @@
                 <constraint firstAttribute="trailing" secondItem="BV7-Lz-cFn" secondAttribute="trailing" constant="210" id="4g2-Br-Gll"/>
                 <constraint firstAttribute="centerX" secondItem="83" secondAttribute="centerX" constant="-126.5" id="4w4-gm-f2M"/>
                 <constraint firstItem="1eq-mt-JYf" firstAttribute="top" secondItem="8" secondAttribute="top" constant="32" id="5IR-2P-Sff"/>
+                <constraint firstItem="RhM-9d-K2q" firstAttribute="top" secondItem="63" secondAttribute="bottom" priority="999" constant="16" id="7Jg-Vd-3mY"/>
                 <constraint firstItem="82" firstAttribute="top" secondItem="80" secondAttribute="bottom" constant="28" id="7bH-w7-UjE"/>
                 <constraint firstAttribute="trailing" secondItem="112" secondAttribute="trailing" id="BhR-id-DyS"/>
                 <constraint firstAttribute="centerX" secondItem="85" secondAttribute="centerX" constant="384" id="C2r-2t-fGS"/>
@@ -188,6 +190,7 @@
                 <constraint firstItem="112" firstAttribute="top" secondItem="63" secondAttribute="bottom" id="Wo6-z4-XgU"/>
                 <constraint firstAttribute="trailing" secondItem="1eq-mt-JYf" secondAttribute="trailing" constant="210" id="dtc-mg-Qfz"/>
                 <constraint firstAttribute="centerY" secondItem="85" secondAttribute="centerY" constant="512" id="fcI-W2-MVH"/>
+                <constraint firstItem="RhM-9d-K2q" firstAttribute="leading" relation="greaterThanOrEqual" secondItem="8" secondAttribute="leading" priority="999" constant="16" id="ghr-kZ-Il6"/>
                 <constraint firstItem="BV7-Lz-cFn" firstAttribute="top" secondItem="8" secondAttribute="top" constant="10" id="jWd-pP-iNs"/>
                 <constraint firstItem="1eq-mt-JYf" firstAttribute="leading" secondItem="8" secondAttribute="leading" constant="2" id="nEk-l1-bFG"/>
                 <constraint firstItem="63" firstAttribute="top" secondItem="8" secondAttribute="top" id="wvX-GC-a9Z"/>
